k8s/platform/prometheus-stack/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.dev.viscord.app`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: redirect-https
          namespace: default
